centered auth page rendering

--- a/UserManagementUI/src/app/auth/forgot-password/forgot-password.component.scss
+++ b/UserManagementUI/src/app/auth/forgot-password/forgot-password.component.scss
@@ -1,33 +1,12 @@
-.container-fluid,
-.row {
-  height: 100vh;
-}
 
-.illustration-column {
-  // background-color: #3498db;
-  background-image: url("../../../assets/Images/Group.png");
-  background-repeat: no-repeat;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.login-column {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .login-form-container {
-  width: 80%;
-  max-width: 400px;
+  width: 100%;
 }
 
 .logo {
-  // font-size: 24px;
-  // font-weight: bold;
+  font-size: 34px;
+  font-weight: 500;
   margin-bottom: 40px;
 }
 
