--- a/UserManagementUI/src/app/user/user.component.html
+++ b/UserManagementUI/src/app/user/user.component.html
@@ -1,18 +1,17 @@
-<!-- app.component.html -->
-<!-- <div class="sidebarContainer">
-  <app-sidebar [isOpen]="isSidebarOpen"></app-sidebar>
-</div>
-<div class="app-container">
-  <div class="header-main-content">
-    <app-header (toggleSidebar)="toggleSidebar()"></app-header>
-    <router-outlet></router-outlet>
-  </div>
-
-</div> -->
+<!-- 
 <div class="app-container" [class.sidebar-open]="isSidebarOpen">
   <app-sidebar [isOpen]="isSidebarOpen"></app-sidebar>
   <div class="main-content">
     <app-header (toggleSidebar)="toggleSidebar()"></app-header>
     <router-outlet></router-outlet>
+  </div>
+</div> -->
+<div class="app-container" [class.sidebar-open]="isSidebarOpen">
+  <app-sidebar [isOpen]="isSidebarOpen"></app-sidebar>
+  <div class="content-wrapper">
+    <app-header (toggleSidebar)="toggleSidebar()"></app-header>
+    <div class="main-content">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
