--- a/UserManagementUI/src/app/auth/auth.component.html
+++ b/UserManagementUI/src/app/auth/auth.component.html
@@ -6,7 +6,9 @@
         </div>
 
         <div class="right-wrapper col">
-            <router-outlet></router-outlet>
+            <div class="rendering-content">
+                <router-outlet></router-outlet>
+            </div>
         </div>
     </div>
 
