--- a/UserManagementUI/src/app/auth/auth.component.scss
+++ b/UserManagementUI/src/app/auth/auth.component.scss
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     justify-content: center;
     align-items: center;
-
+    
     img {
         width: 100%;
     }
@@ -18,4 +18,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    .rendering-content{
+        flex-basis: 50%;
+    }
 }
