Removed Issues given by reviewer

--- a/UserManagementUI/src/app/auth/change-password/change-password.component.html
+++ b/UserManagementUI/src/app/auth/change-password/change-password.component.html
@@ -1,34 +1,63 @@
 <!-- change-password.component.html -->
-<div class="container">
+<div class="container col-6">
   <h2>Change Password</h2>
   <form [formGroup]="changePasswordForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="currentPassword">Current Password</label>
       <div class="password-input-group">
-        <input [type]="currentPasswordVisible ? 'text' : 'password'" id="currentPassword" formControlName="currentPassword" class="form-control" required>
+        <input [type]="currentPasswordVisible ? 'text' : 'password'" id="currentPassword"
+          formControlName="currentPassword" class="form-control" required>
         <span class="password-toggle">
-          <i [ngClass]="currentPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="currentPasswordVisible = !currentPasswordVisible"></i>
+          <i [ngClass]="currentPasswordVisible ? 'bi-eye-slash' : 'bi-eye'"
+            (click)="currentPasswordVisible = !currentPasswordVisible"></i>
         </span>
+      </div>
+      <div
+        *ngIf="changePasswordForm.get('currentPassword')?.invalid && (changePasswordForm.get('currentPassword')?.touched||changePasswordForm.get('currentPassword')?.dirty)"
+        class="text-danger">
+        <small *ngIf="changePasswordForm.get('currentPassword')?.errors?.['required']">Current Password is required</small>
       </div>
     </div>
     <div class="form-group">
       <label for="newPassword">New Password</label>
       <div class="password-input-group">
-        <input [type]="newPasswordVisible ? 'text' : 'password'" id="newPassword" formControlName="newPassword" class="form-control" required>
+        <input [type]="newPasswordVisible ? 'text' : 'password'" id="newPassword" formControlName="newPassword"
+          class="form-control" required>
         <span class="password-toggle">
-          <i [ngClass]="newPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="newPasswordVisible = !newPasswordVisible"></i>
+          <i [ngClass]="newPasswordVisible ? 'bi-eye-slash' : 'bi-eye'"
+            (click)="newPasswordVisible = !newPasswordVisible"></i>
         </span>
+      </div>
+      <div
+        *ngIf="changePasswordForm.get('newPassword')?.invalid && (changePasswordForm.get('newPassword')?.touched||changePasswordForm.get('newPassword')?.dirty)"
+        class="text-danger">
+        <small *ngIf="changePasswordForm.get('newPassword')?.errors?.['required']">New Password is required</small>
+        <small *ngIf="changePasswordForm.get('newPassword')?.errors?.['pattern']">Password must be at least 8 characters long and contain a mix of uppercase and lowercase letters, numbers, and special characters.</small>
       </div>
     </div>
     <div class="form-group">
       <label for="confirmNewPassword">Confirm New Password</label>
       <div class="password-input-group">
-        <input [type]="confirmNewPasswordVisible ? 'text' : 'password'" id="confirmNewPassword" formControlName="confirmNewPassword" class="form-control" required>
+        <input [type]="confirmNewPasswordVisible ? 'text' : 'password'" id="confirmNewPassword"
+          formControlName="confirmNewPassword" class="form-control" required>
         <span class="password-toggle">
-          <i [ngClass]="confirmNewPasswordVisible ? 'bi-eye-slash' : 'bi-eye'" (click)="confirmNewPasswordVisible = !confirmNewPasswordVisible"></i>
+          <i [ngClass]="confirmNewPasswordVisible ? 'bi-eye-slash' : 'bi-eye'"
+            (click)="confirmNewPasswordVisible = !confirmNewPasswordVisible"></i>
         </span>
       </div>
+      <div
+        *ngIf="changePasswordForm.get('confirmNewPassword')?.touched"
+        class="text-danger">
+        <small *ngIf="changePasswordForm.get('confirmNewPassword')?.errors?.['required']">New Password is required</small>
+        <small *ngIf="changePasswordForm.hasError('mismatch')"> Passwords do not match.</small>
+      </div>
+      <!-- <small *ngIf="changePasswordForm.get('confirmNewPassword')?.hasError('required')&&changePasswordForm.get('confirmNewPassword')?.touched" class="text-danger">
+        Confirm New Password is required
+      </small>
+      <small *ngIf="changePasswordForm.hasError('mismatch')" class="text-danger">
+        Passwords do not match.
+      </small> -->
     </div>
-    <button type="submit" class="btn btn-primary" [disabled]="!changePasswordForm.valid">Change Password</button>
+    <button type="submit" class="btn btn-primary my-3" [disabled]="!changePasswordForm.valid">Change Password</button>
   </form>
 </div>
