--- a/UserManagementUI/src/app/auth/change-password/change-password.component.scss
+++ b/UserManagementUI/src/app/auth/change-password/change-password.component.scss
@@ -1,19 +1,24 @@
+.form-group {
+  margin-top: 1rem;
+}
+
 .password-input-group {
-    position: relative;
-  }
-  
-  .password-toggle {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-  }
-  
-  .password-toggle i {
-    font-size: 18px;
-  }
-  
-  .form-control {
-    padding-right: 40px; /* add some space for the toggle icon */
-  }
+  position: relative;
+}
+
+.password-toggle {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.password-toggle i {
+  font-size: 18px;
+}
+
+.form-control {
+  padding-right: 40px;
+  /* add some space for the toggle icon */
+}
